# RL-3DbinPacking

./: GIF_PROBLEM_SOLUTION.md  HYPERPARAMETER_OPTIMIZATION_GUIDE.md  KAMP_EXECUTION_GUIDE.md  KAMP_NARWHALS_FIX_GUIDE.md  README.md  REALTIME_MONITORING_GUIDE.md  SETUP_GUIDE.md  TRAINING_HANG_FIX.md  ULTIMATE_999_SOLUTION.md  advanced_restoration.py  auto_run.sh  cloud_patch.py  corrected_optimal_validation.py  create_kamp_gif_fix.py  enhanced_optimization.py  enhanced_optimization_annotated.py  environment_LuisO3BP.yml  environment_LuisO3BP1.yml  environment_LuisO3BP2.yml  environment_LuisO3BP_err.yml  existing_pytorch_test.py  final_optimal_validation.py  final_optimal_validation_fixed.py  fix_narwhals_error.sh  fix_narwhals_error_windows.sh  focused_LR_optimization.py  generate_gif_only.py  git자동화Sys구축ppt250402.pptx  gradual_expansion_debug.py  gradual_expansion_test.py  gradual_expansion_test_fixed.py  improved_train.py  kamp_auto_run.sh  kamp_autorun.sh  kamp_autosetup.sh  learning_rate_analysis.py  lightweight_train.py  local_auto_sync.sh  local_dev_sync.bat  local_dev_sync.sh  (+22 more)
docs/: Code분석tool@퍼플렉시티.md  GOPT논문요약@퍼플렉-실험실0806.md  Hyperpara최적화-Optuna@퍼플렉0723.md  최종리뷰2508.pptx
docs/자동화 Guide/: FONT_AND_SCALE_FIX_SUMMARY.md  GIF_GENERATION_SUCCESS.md  HYPERPARAMETER_OPTIMIZATION_GUIDE.md  IMPROVEMENT_SUMMARY.md  RESULTS_INTERPRETATION_GUIDE.md  TRAINING_HANG_FIX.md  ULTIMATE_999_SOLUTION.md
docs/커서chat 내용 Export/: RESULTS_INTERPRETATION_GUIDE.md  cursor_realtime_perfo_monitor250618b.md  cursor_realtime_perfo_monitor250619a.md  cursor_realtime_perfo_monitor250620a.md  cursor_realtime_perfo_monitor250620b.md  cursor_realtime_perfo_monitor250625a.md  커서Q&A250626a.md  커서Q&A250704a.md  커서Q&A250714a.md
docs/커서chat내용Export/: Code동작 기술서.md  Code동작 기술서0.md  ETRI 연구인력 현장지원 실적보고서_박정우240630.docx  ETRI연구인력현장지원 실적보고서-박정우250903c.docx  ETRI연구인력현장지원 실적보고서-박정우250903c.html  ETRI연구인력현장지원 실적보고서-박정우250903d.doc  (+77 more)
results/: 커서Q&A0804a.md
src/: __init__.py  device_utils.py  eval.py  no_callback_train.py  packing_env.py  train.py  train_maskable_ppo.py  ultimate_train_fix.py  vectorized_training.py
tests/: profile_script.py
(+5 files in other folders)
